--- a/Synopsis.html
+++ b/Synopsis.html
@@ -49,7 +49,7 @@ boost
     synapse
         {
 <span class="RenoIncludeSPAN">        <span class="RenoIncludeSPAN">template &lt;class <span class="RenoLink"><a href="Signal.html">Signal</a></span>&gt;
-        int <span class="RenoLink"><a href="emit.html">emit</a></span>( void const * e, [<span class="RenoLink"><a href="signal_traits.html">signal_traits</a></span>&lt;<span class="RenoLink"><a href="Signal.html">Signal</a></span>&gt;::arg1_type &amp; a1 [,<span class="RenoLink"><a href="signal_traits.html">signal_traits</a></span>&lt;<span class="RenoLink"><a href="Signal.html">Signal</a></span>&gt;::arg2_type &amp; a2...]] );</span></span>
+        int <span class="RenoLink"><a href="emit.html">emit</a></span>( void const * e, [<span class="RenoLink"><a href="signal_traits.html">signal_traits</a></span>&lt;<span class="RenoLink"><a href="Signal.html">Signal</a></span>&gt;::arg1_type a1 [,<span class="RenoLink"><a href="signal_traits.html">signal_traits</a></span>&lt;<span class="RenoLink"><a href="Signal.html">Signal</a></span>&gt;::arg2_type a2...]] );</span></span>
         }
     }</pre>
 </div><div class="RenoIncludeDIV"><p><span class="RenoEscape">&#35;<!--<wiki>`&#35;</wiki>--></span>include &lt;<span class="RenoLink"><a href="boost_synapse_connect_hpp.html">boost/synapse/connect.hpp</a></span>&gt;</p>
