--- a/emit.html
+++ b/emit.html
@@ -29,7 +29,7 @@ boost
     synapse
         {
 <span class="RenoIncludeSPAN">        template &lt;class <span class="RenoLink"><a href="Signal.html">Signal</a></span>&gt;
-        int <span class="RenoLink">emit</span>( void const * e, [<span class="RenoLink"><a href="signal_traits.html">signal_traits</a></span>&lt;<span class="RenoLink"><a href="Signal.html">Signal</a></span>&gt;::arg1_type &amp; a1 [,<span class="RenoLink"><a href="signal_traits.html">signal_traits</a></span>&lt;<span class="RenoLink"><a href="Signal.html">Signal</a></span>&gt;::arg2_type &amp; a2...]] );</span>
+        int <span class="RenoLink">emit</span>( void const * e, [<span class="RenoLink"><a href="signal_traits.html">signal_traits</a></span>&lt;<span class="RenoLink"><a href="Signal.html">Signal</a></span>&gt;::arg1_type a1 [,<span class="RenoLink"><a href="signal_traits.html">signal_traits</a></span>&lt;<span class="RenoLink"><a href="Signal.html">Signal</a></span>&gt;::arg2_type a2...]] );</span>
         }
     }</pre>
 </div><h4>Effects:</h4>
@@ -41,10 +41,11 @@ boost
 <div class="RenoIncludeDIV"><h4>Throws:</h4>
 <p>Any exception emitted by one of the connected function objects, in which case the remaining function objects are not called.</p>
 </div><h4>Notes:</h4>
-<div><ul><li>Values returned by the <span class="RenoLink"><a href="connect.html">connected</a></span> function objects are ignored.</li>
-<li>If during the <i><span class="RenoLink">emit</span></i> loop <i><span class="RenoLink"><a href="connect.html">connect</a></span></i> is called on the same signal and the same emitter, the newly connected functions are not called during the same <i><span class="RenoLink">emit</span></i> loop.</li>
-<li>If during the <i><span class="RenoLink">emit</span></i> loop a connection object expires, it may or may not get called during the same <i><span class="RenoLink">emit</span></i> loop.</li>
+<p> *Values returned by the <span class="RenoLink"><a href="connect.html">connected</a></span> function objects are ignored.</p>
+<div><ul><li>If before <i><span class="RenoLink">emit</span></i> returns <i><span class="RenoLink"><a href="connect.html">connect</a></span></i> is called on the same signal and the same emitter, any newly connected functions are not called during the same <i><span class="RenoLink">emit</span></i>.</li>
+<li>If before <i><span class="RenoLink">emit</span></i> returns a connection object expires, it may or may not get called during the same <i><span class="RenoLink">emit</span></i>.</li>
 <li>If <i>e</i> is 0 <i><span class="RenoLink">emit</span></i> simply returns 0 without calling any functions. Because of this feature, if the emitter is held by a <i>shared_ptr</i> object <i>sp</i>, there is no harm in calling <i><span class="RenoLink">emit</span>&lt;Signal&gt;(sp.get(),....)</i> even if <i>sp</i> is empty. Similarly, if the caller has a <i>weak_ptr</i> to the emitter object which has expired, calling <i><span class="RenoLink">emit</span>&lt;Signal&gt;(wp.lock().get(),....) will simply return 0.</i></li>
+<li> <i><span class="RenoLink">emit</span></i> takes its arguments by value. Use <i>boost::ref</i> to pass by reference.</li>
 </ul></div>
 <h4>Header-only emit:</h4>
 <p>If no signals are ever connected, <i>emit</i> is a no-op. For this reason, if a user library calls <i><span class="RenoLink">emit</span></i> but does not call <i>connect</i>, there is no need to link the <i><span class="RenoLink"><a href="index.html">Boost Synapse</a></span></i> library. As an example, a low level library that emits signals similar to <i>report_progress</i> (see the <i>FILE</i> example earlier on this page) can do so without requiring a client program that doesn't care about them to link <i><span class="RenoLink"><a href="index.html">Boost Synapse</a></span></i>.</p>
