Documentation update, added to Q&A

--- a/Building.html
+++ b/Building.html
@@ -33,7 +33,7 @@
 <li> &lt;atomic&gt;</li>
 </ul></div>
 </div><div class="RenoAutoDIV"><div class="RenoHR"><hr/></div>
-See also: <span class="RenoPageList"><a href="index.html">Boost Synapse</a></span>
+See also: <span class="RenoPageList"><a href="index.html">Boost Synapse</a>&nbsp;| <a href="questions_and_answers.html">Questions and Answers</a></span>
 </div>
 <!-- Copyright (c) 2008-2013 Emil Dotchevski and Reverge Studios, Inc. -->
 <!-- Distributed under the Boost Software License, Version 1.0. (See accompanying -->
