Added documentation page comparing Synapse and Signals2.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
 <div class="body-1">
 <div class="body-2">
 <div>
-<div id="reverge_logo">
-<a href="http://www.revergestudios.com"><img style="border:0" src="reverge.png" alt="Reverge"/></a>
-</div>
 <h1><a href="index.html">Boost Synapse</a></h1>
 </div>
 <!-- Copyright (c) 2015 Emil Dotchevski and Reverge Studios, Inc. -->
@@ -42,6 +39,8 @@
 <a href="using_meta_signals_with_QPushButton.html">Using Meta Signals with QPushButton</a></div>
 <h3>Multi-threading support</h3>
 <p>Most of the <i><span class="RenoLink">Boost Synapse</span></i> functionality is implemented using thread-local data structures, so by default signals are propagated independently within each user thread. In addition, thread-local queues can be created in any thread, to synchronously receive queued signals emitted asynchronously by other threads; see <span class="RenoLink"><a href="interthread_communication_support.html">Interthread Communication Support</a></span>.</p>
+<h3>Comparison with Boost.Signals2</h3>
+<p>If you're familiar with <i>Boost.Signals2</i> and want to understand how <i>Synapse</i> is different, to read about the design tradeoffs in each library, or to learn about <i>Synapse</i>'s special features (e.g. meta signals), see <span class="RenoLink"><a href="Comparison_between_Boost_Signals2_and_Synapse.html">Comparison between Boost.Signals2 and Synapse</a></span>.</p>
 <h3>Download</h3>
 <p>See <span class="RenoLink"><a href="https://github.com/zajo/boost-synapse">this</a></span> github repo.</p>
 </div><!-- Copyright (c) 2008-2013 Emil Dotchevski and Reverge Studios, Inc. -->
