--- a/Synopsis.html
+++ b/Synopsis.html
@@ -200,7 +200,8 @@ boost
 <span class="RenoIncludeSPAN">        <span class="RenoIncludeSPAN">shared_ptr&lt;thread_local_queue&gt;
         <span class="RenoLink"><a href="create_thread_local_queue.html">create_thread_local_queue</a></span>();</span>        
         
-        <span class="RenoIncludeSPAN">int <span class="RenoLink"><a href="poll.html">poll</a></span>( thread_local_queue &amp; q );</span></span>
+        <span class="RenoIncludeSPAN">int <span class="RenoLink"><a href="poll.html">poll</a></span>( thread_local_queue &amp; q );</span>        
+        <span class="RenoIncludeSPAN">void <span class="RenoLink"><a href="post.html">post</a></span>( thread_local_queue &amp; q, function&lt;void()&gt; const &amp; f );</span></span>
         }
     }</pre>
 </div></div></div><div class="RenoAutoDIV"><div class="RenoHR"><hr/></div>
