--- a/boost_synapse_thread_local_queue_hpp.html
+++ b/boost_synapse_thread_local_queue_hpp.html
@@ -28,11 +28,12 @@ boost
 <span class="RenoIncludeSPAN">        <span class="RenoIncludeSPAN">shared_ptr&lt;thread_local_queue&gt;
         <span class="RenoLink"><a href="create_thread_local_queue.html">create_thread_local_queue</a></span>();</span>        
         
-        <span class="RenoIncludeSPAN">int <span class="RenoLink"><a href="poll.html">poll</a></span>( thread_local_queue &amp; q );</span></span>
+        <span class="RenoIncludeSPAN">int <span class="RenoLink"><a href="poll.html">poll</a></span>( thread_local_queue &amp; q );</span>        
+        <span class="RenoIncludeSPAN">void <span class="RenoLink"><a href="post.html">post</a></span>( thread_local_queue &amp; q, function&lt;void()&gt; const &amp; f );</span></span>
         }
     }</pre>
 </div></div><div class="RenoAutoDIV"><div class="RenoHR"><hr/></div>
-See also: <span class="RenoPageList"><a href="create_thread_local_queue.html">create_thread_local_queue</a>&nbsp;| <a href="poll.html">poll</a>&nbsp;| <a href="Synopsis.html">Synopsis</a></span>
+See also: <span class="RenoPageList"><a href="create_thread_local_queue.html">create_thread_local_queue</a>&nbsp;| <a href="poll.html">poll</a>&nbsp;| <a href="post.html">post</a>&nbsp;| <a href="Synopsis.html">Synopsis</a></span>
 </div>
 <!-- Copyright (c) 2008-2013 Emil Dotchevski and Reverge Studios, Inc. -->
 <!-- Distributed under the Boost Software License, Version 1.0. (See accompanying -->
