--- a/Index_of_functions.html
+++ b/Index_of_functions.html
@@ -36,6 +36,8 @@
 <p><a href="post.html">post</a></p>
 <h3>t</h3>
 <p><a href="translate.html">translate</a></p>
+<h3>w</h3>
+<p><a href="wait.html">wait</a></p>
 </div>
 </div><div class="RenoAutoDIV"><div class="RenoHR"><hr/></div>
 See also: <span class="RenoPageList"><a href="index.html">Boost Synapse</a></span>
