--- a/Synopsis.html
+++ b/Synopsis.html
@@ -201,6 +201,7 @@ boost
         <span class="RenoLink"><a href="create_thread_local_queue.html">create_thread_local_queue</a></span>();</span>        
         
         <span class="RenoIncludeSPAN">int <span class="RenoLink"><a href="poll.html">poll</a></span>( thread_local_queue &amp; q );</span>        
+        <span class="RenoIncludeSPAN">int <span class="RenoLink"><a href="wait.html">wait</a></span>( thread_local_queue &amp; q );</span>        
         <span class="RenoIncludeSPAN">void <span class="RenoLink"><a href="post.html">post</a></span>( thread_local_queue &amp; q, function&lt;void()&gt; const &amp; f );</span></span>
         }
     }</pre>
