--- a/index.html
+++ b/index.html
@@ -656,6 +656,9 @@ Synapse is not part of Boost.
 </li>
 </ul>
 </div>
+<div class="paragraph">
+<p>See the <a href="https://travis-ci.org/zajo/boost-synapse">Synapse Travis CI Builds</a>.</p>
+</div>
 </div>
 </div>
 <div class="sect1">
